# mcpis9

./: .env.example  .gitignore  .pre-commit-config.yaml  2025-07-11-caveat-the-messages-below-were-generated-by-the-u.txt  AGENT_ARCHITECTURE.md  AGENT_SYSTEM.md  AGENT_SYSTEM_README.md  CHANGELOG.md  CLAUDE.md  DataProcessor_Documentation.md  GEMINI.md  LICENSE  Makefile  README.md  action.yml  example_usage.py  package.json  pnpm-lock.yaml  pyproject.toml  test-claude-agent-tasks.py  test-claude-github-tasks.md  test-code-review-pr.py  tsconfig.json
.github/prompts/: developer.md  devops-engineer.md  project-manager.md  qa-engineer.md  tech-lead.md
.github/workflows/: agent-orchestrator.yml  claude-api-testing.yml  claude-code-action.yml  claude-code-review.yml  claude-docs-generator.yml  claude-gemini-orchestrator.yml  claude-issue-handler.yml  claude-pr-path-specific.yml  claude-pr-tests.yml  claude-review-from-author.yml  claude-simple.yml  claude-specialized.yml  code-review.yml  company-workflow.yml  developer.yml  devops.yml  gemini-pr-review.yml  gemini-specialized.yml  issue-triage.yml  project-manager.yml  qa-engineer.yml  tech-lead-final.yml  tech-lead.yml  test-claude-provider.yml  test-gemini-provider.yml  test-provider-switching.yml
app/: cli.py  main.py  server.py
app/agents/: __init__.py  gemini.py  github.py
app/clients/: __init__.py  gemini.py
app/core/: config.py
app/models/: __init__.py
app/services/: __init__.py
docs/: AGENT_SYSTEM.md  QUICKSTART.md
scripts/: pre-push
src/: index.ts
src/agents/: agent-integration.ts  base-agent.ts  event-router.ts  index.ts  registry.ts
src/agents/implementations/: code-reviewer.ts  devops-engineer.ts  junior-developer.ts  project-manager.ts  qa-engineer.ts  senior-developer.ts
src/entrypoints/: prepare.ts
test/: data-formatter.test.ts  integration-sanitization.test.ts  mcpis9.test.ts  sanitizer.test.ts
test/agents/: agent-registry.test.ts
test/fixtures/: sample-turns-expected-output.md
tests/: test_dummy.py  test_gemini_agent.py  test_gemini_client.py  test_gemini_tasks.py  test_main.py  test_server.py
