[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpisia"
version = "0.2.0"
description = "MCP implementation with GitHub Agent Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "MCPISIA Team"},
]
keywords = ["mcp", "github", "ai", "claude", "orchestration", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # MCP Core
    "mcp>=1.10.1",
    "pydantic>=2.11.7",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.35.0",
    "aiofiles>=24.1.0",
    "redis[hiredis]>=5.2.0",
    "typing-extensions>=4.14.1",
    "python-dotenv>=1.0.1",
    "structlog>=25.4.0",
    # GitHub Agent Orchestrator
    "anthropic>=0.57.1",
    "PyGithub>=2.6.1",
    "aiohttp>=3.12.14",
    "click>=8.2.1",
    "rich>=14.0.0",
    # Modern HTTP client
    "httpx>=0.28.0",
    "pydantic-settings>=2.8.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    # Code Quality (2025 stack)
    "ruff>=0.11.8",
    "pyright>=1.1.403",
    "bandit>=1.8.6",
    "sqlfluff>=3.4.1",
    # Pre-commit
    "pre-commit>=4.2.0",
    "commitizen>=4.8.3",
    # Note: gitleaks is not a Python package - install separately
]

[project.urls]
Homepage = "https://github.com/eagurin/mcpis9"
Repository = "https://github.com/eagurin/mcpis9.git"
Issues = "https://github.com/eagurin/mcpis9/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
mcpisia-server = "mcpisia.server:main"
github-orchestrator = "mcpisia.agents.github:main"
agent-cli = "mcpisia.cli:main"

# 🐍 Modern Ruff configuration (replaces Black, Flake8, isort, pyupgrade, bandit)
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.ruff.lint]
# Enable comprehensive rule set for 2025
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "N",      # pep8-naming
    "C4",     # flake8-comprehensions
    "ICN",    # flake8-import-conventions
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "T20",    # flake8-print
    "RET",    # flake8-return
    "S",      # bandit (security)
    "ERA",    # eradicate
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (common in tests)
    "T201",   # print statements (useful for debugging)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S106", "S311", "PLR2004"]
"scripts/**/*" = ["T201", "S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["mcpisia"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# 🔍 Pyright configuration (Microsoft's TypeScript-like type checker)
[tool.pyright]
include = ["app", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"

# 🧪 Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--strict-markers",
    "--disable-warnings",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ✍️ Commitizen configuration (Conventional Commits)
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

# 📊 SQLFluff configuration (SQL linting)
[tool.sqlfluff.core]
dialect = "postgres"
max_line_length = 120
exclude_rules = ["L034", "L036"]

[tool.sqlfluff.indentation]
indent_unit = "space"
tab_space_size = 4

# 🔒 Bandit configuration (Security)
[tool.bandit]
exclude_dirs = ["tests", "migrations"]
severity = "medium"
confidence = "medium"
skips = ["B101", "B601"]

# 📦 Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
